fix(fo): fix z-index of topbar and sidemenu

--- a/client/src/components/preview/LangSelector.scss
+++ b/client/src/components/preview/LangSelector.scss
@@ -1,6 +1,6 @@
 .LangSelector {
   padding: 0;
-  margin: 0;
+  margin-top: 20px;
 
   a {
     text-decoration: none;
@@ -8,8 +8,8 @@
       text-decoration: none;
     }
 
-    font-size: 1.6rem;
-    color: $color-breadcrumb;
+    font-size: 2.1rem;
+    color: #777;
     margin-right: 10px;
 
     &.other {
